tests/compiler/diagnostics-engine/parsing-errors/tests/no-class/expected.txt
Error: Expected 'class', got 'function'
 --> Main.jack:1:1
  |
1 | function void multiply(int x, int y) {
  | ^~~~~~~~
